--- a/Projects.LudumDare/Projects.LudumDare.csproj
+++ b/Projects.LudumDare/Projects.LudumDare.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Core.HttpDynamo" Version="1.0.0" />
-    <PackageReference Include="Core.JwtBuilder" Version="1.0.0" />
+    <PackageReference Include="Core.HttpDynamo" Version="1.12.0" />
+    <PackageReference Include="Core.JwtBuilder" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
